<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="icon_add">Icon add</string>
    <string name="apply_for_a_loan">Apply for a loan</string>
    <string name="welcome_message">Welcome back!</string>
    <string name="bank_logotype">Bank logotype</string>
    <string name="loan_value">- ₽%1$d</string>
    <string name="loan_remaining">Until: %1$s!</string>
    <string name="sber">Sber</string>
</resources>