<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/materialToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff4f378b"
            android:elevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/welcome_message"
            app:titleTextColor="@color/white" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvLoanList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingHorizontal="15dp"
            android:paddingVertical="20dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialToolbar"
            tools:listitem="@layout/item_loan"
            tools:visibility="visible" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvApplyForLoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply_for_a_loan"
            app:layout_constraintBottom_toTopOf="@+id/ivArrow"
            app:layout_constraintEnd_toStartOf="@+id/ivArrow"
            app:layout_constraintTop_toTopOf="@+id/ivArrow" />

        <ImageView
            android:id="@+id/ivArrow"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginBottom="5dp"
            android:rotation="180"
            android:rotationY="180"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toTopOf="@+id/fabApplyLoan"
            app:layout_constraintEnd_toEndOf="@+id/fabApplyLoan"
            app:layout_constraintStart_toStartOf="@+id/fabApplyLoan"
            app:tint="?attr/colorOnSurface" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/hintGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="ivArrow, tvApplyForLoan"
            tools:visibility="invisible" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabApplyLoan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="17dp"
            android:contentDescription="@string/icon_add"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>